--- a/CSS/general.css
+++ b/CSS/general.css
@@ -15,24 +15,25 @@ header {
   align-items: center;
   justify-content: space-between;
   background: #1C2833;
-  padding: 15px 50px;
+  padding: 15px 30px;
 }
 
 /* Logo & Title */
 .logo {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 15px;
 
 }
 
 .logo img {
-  height: 50px;
+  height: 40px;
   border-radius: 50%;
 }
 
 .logo h1 {
-  font-size: 26px;
+  font-size: 20px;
   font-weight: bold;
   color: #F8FAFC;
   margin: 0;
@@ -42,7 +43,7 @@ header {
 nav ul {
   list-style: none;
   display: flex;
-  gap: 20px;
+  gap: 5px;
   padding: 0;
   margin: 0;
 }
@@ -53,11 +54,11 @@ nav ul li {
 
 nav ul li a {
   font-family: "Courier New", Courier, monospace;
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   text-decoration: none;
   color: white;
   font-weight: 600;
-  padding: 10px 15px;
+  padding: 8px;
   transition: color 0.3s;
 }
 
